--- a/test/data/atools_torque.conf
+++ b/test/data/atools_torque.conf
@@ -21,7 +21,7 @@ job_name_var = JOB_NAME
 
 [slurm]
 array_idx_var = SLURM_ARRAY_TASK_ID
-job_id_var = SLURM_JOB_ID
+job_id_var = SLURM_ARRAY_JOB_ID
 job_name_var = SLURM_JOB_NAME
 
 # file formats for reduction
