Modifications to Makefile.in/Makefile.am to install files from tmpls subdirectory.

--- a/Makefile.in
+++ b/Makefile.in
@@ -270,7 +270,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = bin conf lib reduce
+SUBDIRS = bin conf lib reduce tmpls
 all: all-recursive
 
 .SUFFIXES:
