Correction to the documentation and to the Makefiles, the latter to install aranges and asummary.

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -283,7 +283,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = vsc
 atoolslibdir = $(libdir)
-dist_atoolslib_DATA = acreate.py aenv.py aload.py alog.py arange.py areduce.py
+dist_atoolslib_DATA = acreate.py aenv.py aload.py alog.py arange.py aranges.py areduce.py asummary.py
 all: all-recursive
 
 .SUFFIXES:
