--- a/bin/Makefile.in
+++ b/bin/Makefile.in
@@ -221,7 +221,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-dist_bin_SCRIPTS = acreate aenv aload alog arange areduce
+dist_bin_SCRIPTS = acreate aenv aload alog arange aranges areduce asummary
 all: all-am
 
 .SUFFIXES:
