--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,3 +1,3 @@
 SUBDIRS = vsc
 atoolslibdir = $(libdir)
-dist_atoolslib_DATA = acreate.py aenv.py aload.py alog.py arange.py areduce.py
+dist_atoolslib_DATA = acreate.py aenv.py aload.py alog.py arange.py aranges.py areduce.py asummary.py
