(manual) changes to two Makefile.in files to corrspond to the modified Makefile.am files from commit develop-asummary 2f0cab2.

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -282,7 +282,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = vsc
 atoolslibdir = $(libdir)
-dist_atoolslib_DATA = acreate.py aenv.py aload.py alog.py arange.py areduce.py
+dist_atoolslib_DATA = acreate.py aenv.py aload.py alog.py arange.py areduce.py aranges.py asummary.py
 all: all-recursive
 
 .SUFFIXES:
