--- a/bin/Makefile.in
+++ b/bin/Makefile.in
@@ -220,7 +220,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-dist_bin_SCRIPTS = acreate aenv aload alog arange areduce
+dist_bin_SCRIPTS = acreate aenv aload alog arange areduce aranges asummary
 all: all-am
 
 .SUFFIXES:
